--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileTerm">
         <activity
+            android:name=".Init.PasswordInitActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Init.SignUpActivity"
+            android:exported="false" />
+        <activity
             android:name=".Init.LoginActivity"
             android:exported="true" />
         <activity
