로그인 기능 구현 완료, 주석 처리 미완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity
             android:name=".Init.LoginActivity"
             android:exported="true" />
+        <activity android:name=".MainActivity"
+            android:exported="true"/>
         <activity
             android:name=".Init.AuthActivity"
             android:exported="true">
