--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ android {
 
 dependencies {
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
-
+    implementation platform('com.google.firebase:firebase-bom:30.0.0')
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
