--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MobileTerm">
         <activity
+            android:name=".Init.GoogleLoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Init.LoginSelectionActivity"
+            android:exported="false" />
+        <activity
             android:name=".Init.PasswordInitActivity"
             android:exported="false" />
         <activity
@@ -21,8 +27,9 @@
         <activity
             android:name=".Init.LoginActivity"
             android:exported="true" />
-        <activity android:name=".MainActivity"
-            android:exported="true"/>
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
         <activity
             android:name=".Init.AuthActivity"
             android:exported="true">
