--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,11 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+//    allprojects {
+//        repositories {
+//            maven {url "https://jitpack.io"}
+//        }
+//    }
     buildTypes {
         release {
             minifyEnabled false
@@ -50,5 +55,8 @@ dependencies {
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
     implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
+   // implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+
 
 }
